--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				                        <div class="smalltext">Days</div>
 				                    </div>
 				                    <div class="col counter-img">
-				                    	<img src="images/deepa1.JPG" height="90px" width="80px" alt="">
+				                    	<img src="images/deepa2.jpg" height="90px" width="80px" alt="">
 				                    </div>
 				                     
 				                    <div class="col clockinner clockinner1">
