--- a/sections/degree.html
+++ b/sections/degree.html
@@ -84,7 +84,7 @@ Happiest Birthday ❤️</h3>" style="width: 100px; height: 100px;">
             <a href="#"><img src="../images/pics_with_degree/degree1.jpg" alt="IMage" class="img-fluid" style="width: 300px;height:260px;"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade"
-            data-src="../images/pics_with_degree/degree2.jpg" data-sub-html="<h2>VINI</h2><h3>VINI ka msg</h3>">
+            data-src="../images/pics_with_degree/degree2.jpg" data-sub-html="<h2>VINI</h2><h3>Happy janamdin my bachpan se hi smart meri bachpan wali dost... I wish corona jaldi jaaye so that we can eat your haath ka bana hua khana❤️🥰...love you😘😘</h3>">
             <a href="#"><img src="../images/pics_with_degree/degree2.jpg" alt="IMage" class="img-fluid" style="width: 300px;height:260px;"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade"
